--- a/config.yaml
+++ b/config.yaml
@@ -1,20 +1,20 @@
 database:
-  file_name: "sb79_housing.duckdb"
+  file_name: "data/sb79_housing.duckdb"
 
 files:
-  neighborhoods_geojson: "neighborhoods.geojson"
-  chicago_zoning_geojson: "chicago_zoning.geojson"
-  cta_stations_geojson: "cta_stations.geojson"
-  cta_bus_routes_geojson: "cta_bus_routes.geojson"
-  assessor_universe_csv: "assessor_universe.csv"
-  assessed_values_2023_csv: "assessed_values_2023.csv"
-  res_characteristics_csv: "res_characteristics.csv"
-  parcel_addresses_csv: "parcel_addresses.csv"
-  parcel_sales_csv: "parcel_sales.csv"
-  building_permits_csv: "building_permits.csv"
-  zillow_rent_csv: "zillow_rent.csv"
-  cook_parcels_geojson: "cook_parcels.geojson"
-  output_map_geojson: "final_map.geojson"
+  neighborhoods_geojson: "data/neighborhoods.geojson"
+  chicago_zoning_geojson: "data/chicago_zoning.geojson"
+  cta_stations_geojson: "data/cta_stations.geojson"
+  cta_bus_routes_geojson: "data/cta_bus_routes.geojson"
+  assessor_universe_csv: "data/assessor_universe.csv"
+  assessed_values_2023_csv: "data/assessed_values_2023.csv"
+  res_characteristics_csv: "data/res_characteristics.csv"
+  parcel_addresses_csv: "data/parcel_addresses.csv"
+  parcel_sales_csv: "data/parcel_sales.csv"
+  building_permits_csv: "data/building_permits.csv"
+  zillow_rent_csv: "data/zillow_rent.csv"
+  cook_parcels_geojson: "data/cook_parcels.geojson"
+  output_map_geojson: "data/final_map.geojson"
   output_article_md: "article.md"
   output_index_html: "index.html"
 
