--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,7 @@ files:
   zillow_rent_csv: "data/zillow_rent.csv"
   cook_parcels_geojson: "data/cook_parcels.geojson"
   output_map_geojson: "data/final_map.geojson"
+  condo_characteristics_csv: "data/condo_characteristics.csv"
   output_article_md: "article.md"
   output_index_html: "index.html"
 
@@ -29,13 +30,13 @@ urls:
   parcel_addresses_csv: "https://datacatalog.cookcountyil.gov/resource/3723-97qp.csv?$where=year=2023&$limit=2000000"
   parcel_sales_csv: "https://datacatalog.cookcountyil.gov/resource/wvhk-k5uv.csv?$where=year>=2023&$limit=500000"
   building_permits_csv: "https://data.cityofchicago.org/resource/ydr8-5enu.csv?$where=permit_type='PERMIT - NEW CONSTRUCTION' AND issue_date>='2020-01-01'&$limit=50000"
+  condo_characteristics_csv: "https://datacatalog.cookcountyil.gov/api/views/3r7i-mrz4/rows.csv?accessType=DOWNLOAD"
 
 economic_assumptions:
   target_profit_margin: 1.15
-  unit_size_sqft: 800.0
+  average_unit_size_sqft: 1000.0
   default_condo_price_per_sqft: 350.0
-  cost_2_4_units: 240000.0
-  cost_5_15_units: 288000.0
-  cost_15_plus_units: 336000.0
+  const_cost_per_sqft_high: 300.0
+  const_cost_per_sqft_low: 240.0
   high_cost_acq_floor_per_sqft: 100.0
   default_acq_floor_per_sqft: 20.0
