--- a/config.yaml
+++ b/config.yaml
@@ -34,9 +34,16 @@ urls:
 
 economic_assumptions:
   target_profit_margin: 1.15
-  average_unit_size_sqft: 1000.0
+  far_current: 1.2
+  far_pritzker: 1.5
+  far_sb79: 3.0
+  far_train: 3.0
+  far_hf: 2.5
+  far_combo: 2.5
+  efficiency_factor: 0.82
+  min_unit_size_sqft: 600.0
   default_condo_price_per_sqft: 350.0
   const_cost_per_sqft_high: 300.0
   const_cost_per_sqft_low: 240.0
-  high_cost_acq_floor_per_sqft: 100.0
+  high_cost_acq_floor_per_sqft: 125.0
   default_acq_floor_per_sqft: 20.0
