--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ files:
   chicago_zoning_geojson: "data/chicago_zoning.geojson"
   cta_stations_geojson: "data/cta_stations.geojson"
   cta_bus_routes_geojson: "data/cta_bus_routes.geojson"
+  chicago_parks_geojson: "data/chicago_parks.geojson"
   assessor_universe_csv: "data/assessor_universe.csv"
   assessed_values_2023_csv: "data/assessed_values_2023.csv"
   res_characteristics_csv: "data/res_characteristics.csv"
@@ -24,6 +25,7 @@ urls:
   neighborhoods_geojson: "https://data.cityofchicago.org/api/geospatial/bbvz-uum9?method=export&format=GeoJSON"
   cta_stations_geojson: "https://data.cityofchicago.org/api/geospatial/8pix-ypme?method=export&format=GeoJSON"
   cta_bus_routes_geojson: "https://data.cityofchicago.org/api/geospatial/6uva-a5ei?method=export&format=GeoJSON"
+  chicago_parks_geojson: "https://data.cityofchicago.org/resource/ejsh-fztr.geojson?$limit=2000"
   assessor_universe_csv: "https://datacatalog.cookcountyil.gov/api/views/pabr-t5kh/rows.csv?accessType=DOWNLOAD"
   assessed_values_2023_csv: "https://datacatalog.cookcountyil.gov/resource/uzyt-m557.csv?$where=year=2023&$limit=2000000"
   res_characteristics_csv: "https://datacatalog.cookcountyil.gov/resource/x54s-btds.csv?$where=year=2023&$limit=2000000"
